--- a/src/components/Portfolio/Portfolio.module.css
+++ b/src/components/Portfolio/Portfolio.module.css
@@ -16,6 +16,7 @@
 }
 
 .main {
+  position: relative;
   width: 260px;
   height: auto;
   display: flex;
@@ -23,16 +24,19 @@
   margin: 10px;
   padding: 10px;
   border-radius: 1px 10px 10px 1px;
-  max-height: inherit;
+  max-height: 500px;
+  overflow-y: scroll;
 }
 
 @media only screen and (max-width: 600px) {
   .container {
     width: 90%;
     margin-left: 5%;
+    overflow: scroll;
   }
 
   .main {
     border-radius: 0;
+    overflow-y: unset;
   }
 }
